# PCS3335-LabDigA

./: .gitignore  exp1_b_codificador.qarlog  onboarding.sof
Experiencia 2/: operators.vhd
Experiencia 3/: exp3_somador.vhd  operators.vhd  planejamento-pre-aula.md
Experiencia 3/testbench_cpp/: main  main.cpp
Experiencia 4/: RESULTADO02.vhd  conclusão.md  exp4_multisteps.vhd  multisteps_para_submissao.vhd  planejamento-pre-aula.md  registrador.vhd  testbench.vhd  teste01.txt
Experiencia 4/exp4/: exp4_multisteps.vhd  operators.vhd  stepfun.vhd  testbench.vhd
Experiencia 4/multisteps/: FD_multisteps.vhd  UC_multisteps.vhd  multisteps.vhd  somador.vhd  stepfun.vhd
Experiencia 5/: bláblá.vhd  bléblé.vhd  conclusão.md  display.vhd  ex5_serial_out.vhd  planejamento-pre-aula.md
Experiencia 5/serial_out/: serial_out.vhd  testbench.vhd
Experiencia 5/testbench/: Cargo.toml
Experiencia 6/: conclusao.md  planejamento-pre-aula.md
Experiencia 7/: RESULTADO_JUDGE.vhd  conclusão.md  exp7_sha256_1b.vhd  planejamento-pre-aula.md
Experiencia 8/: Justfile  RESULTADO_JUDGE.vhd  conclusão.md  exp8_sha256.vhd  wave.fst  wave.gtkw
Projeto Final/: TEST_VGA.vhd  VGA.vhd  pixels.vhd
Projeto Final/4bitsImage/: README.md  pyproject.toml
Projeto Final/4bitsImage/src/: main.py
Projeto Final/Computador/: pyproject.toml
Projeto Final/Computador/src/: main.py  sdk.py
exp1_b_codificador/: exp1_b_codificador.qsf  exp1_b_codificador.qws  exp1_b_codificador.restore.rpt  exp1_b_codificador_assignment_defaults.qdf  exp2_operadores.vhd  exp2_operadores.vhd.bak  qar_info.json
(+188 files in other folders)
