[project]
name = "Computador"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "AlanJS26", email = "alanjoses.29@gmail.com"},
]
dependencies = [
    "matplotlib>=3.7.5",
    "opencv-contrib-python>=4.8.1.78",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/main.py"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
